@@ -1,4 +1,14 @@
-### Fix packaging (HEAD -> main)
+### Fix configuration file (HEAD -> main)
+>Thu, 13 Oct 2022 20:18:40 +0200
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix packaging (origin/main, origin/HEAD)
 >Thu, 13 Oct 2022 19:04:10 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Add HTTPS support (origin/main, origin/HEAD)
+### Add HTTPS support
 >Thu, 13 Oct 2022 18:52:59 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
